# call-me-maybe

./: .gitignore  Makefile  README.md  main_prompt.txt  mian.txt  pyproject.toml  tst.py
data/input/: function_calling_tests.json
data/output/: output_file.json
moulinette/: .gitignore  pyproject.toml
moulinette/moulinette/: __init__.py  __main__.py  extract_functions_infos.py  functions_definition.py  generate_tests_and_corrections.py  output_formatter.py
src/: __main__.py  find_parameters.py  function_name.py  parser.py
