[project]
name = "llm-sdk"
version = "0.1.0"
description = "LLM SDK for local model inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "mypy>=2.1.0",
    "flake8>=7.3.0",
    "pdbpp>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_sdk"]
