[project]
name = "moulinette"
version = "0.1.0"
description = "Moulinette for function calling exercise grading"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.1",
    "pydantic>=2.11.0",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moulinette"]
